# libnss-tartarus

./: .gitignore  SConstruct  SysDB.ice.copy  SysDBI.cpp  SysDBI.h  TartarusClient.cpp  TartarusClientI.cpp  TartarusClientI.h  TartarusDebug.cpp  TartarusDebug.h  TartarusNSCD.cpp  TartarusNSCDInit.cpp  TartarusNSCDInit.h  TartarusNSCDKinit.cpp  TartarusNSCDKinit.h  TartarusRPC.h  TartarusRPCTypes.h  TartarusServer.cpp  TartarusServerI.cpp  TartarusServerI.h  TartarusSysDB.cpp  TartarusSysDB.h  config.service  libnss-tartarus-0.1.1-alt-DSO.patch  libnss-tartarus-0.1.1-alt-cxx_flags.patch  libnss-tartarus.spec  lock.h  nss_role.cpp  nss_tartarus.cpp  nss_tartarus.h  nss_tartarus_grp.cpp  nss_tartarus_pwd.cpp  role.cpp  role.h  tnscd.init.alt
.gear/: rules
TartarusRPC/: SConstruct  client.cpp  debug.cpp  debug.hpp  rpc.hpp  rpc_types.hpp  sample_client.cpp  sample_server.cpp  server.cpp
TartarusRPC/json_spirit/: SConscript  json_spirit.h  json_spirit_reader.cpp  json_spirit_reader.h  json_spirit_value.h
json_spirit/: SConscript  json_spirit_writer.cpp
libnss-tartarus/: CMakeLists.txt  SConstruct  debug.h  nscd.config  tnscd.config
libnss-tartarus/NSCD/: CMakeLists.txt  Init.cpp  Init.h  Kinit.cpp  Kinit.h  NSCD.cpp  Prepare.cpp  Prepare.h  SConscript  ServerDBUS.cpp  ServerDBUS.h  ServerI.cpp  ServerI.h  Signal.cpp  Signal.h  SysDB.cpp  SysDB.h  SysDBClient.cpp  SysDBClient.h  ru.tartarus.DBus.TNSCD.conf  ru.tartarus.DBus.TNSCD.service  ru.tartarus.DBus.TNSCD.xml  tnscd.runner
libnss-tartarus/RPC/: CMakeLists.txt  Config.h  RPC.h  SConscript  client.cpp  server.cpp
libnss-tartarus/cmake/: dbusxx-xml2cpp.cmake  define.cmake  slice2cpp.cmake
libnss-tartarus/include/: Config.h  Debug.h
libnss-tartarus/json_spirit/: SConscript  json_spirit_writer.h
libnss-tartarus/nss/: CMakeLists.txt  ClientDBus.c  ClientDBus.h  ClientI.cpp  ClientI.h  SConscript  nss_tartarus.c  nss_tartarus.cpp  nss_tartarus.h  nss_tartarus_grp.c  nss_tartarus_grp.cpp  nss_tartarus_pwd.c  nss_tartarus_pwd.cpp  test.c
libnss-tartarus/tools/: slice2cpp.py
